make supported signature schemes explicit